--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css">
     <title>Index - CSS</title>
 </head>
 <body>
     <h1>Index</h1>
+
+    <div id="tree">
+        <ul>
+            <li>
+                Grid
+                <ol>
+                    <li><a href="grid/1/index.html">The Basics</a></li>
+                    <li><a href="grid/2/index.html">Layout</a></li>
+                </ol>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
