grid resize bar

--- a/grid/2/index.html
+++ b/grid/2/index.html
@@ -30,19 +30,25 @@
 
     <br>
 
-    <div id="grid-2-cont">
-        <div id="grid-2-child-1">One</div>
-        <div id="grid-2-child-2">Two</div>
-        <div id="grid-2-child-3">Three</div>
-        <div id="grid-2-child-4">Four</div>
-        <div id="grid-2-child-5">Five - Out of order and taller</div>
-        <div id="grid-2-child-6">Six</div>
-        <div id="grid-2-child-7">Seven - This one's a little longer as it takes 2 columns in the grid</div>
-        <div id="grid-2-child-8">Eight</div>
-        <div id="grid-2-child-9">Nine</div>
-        <div id="grid-2-child-10">Ten</div>
-        <div id="grid-2-child-11">Eleven</div>
-        <div id="grid-2-child-12">Twelve</div>
+    <p>Grids are responsive by default - resize the grid using the handle on the right</p>
+
+    <div class="drag-cont">
+        <div id="grid-2-cont">
+            <div id="grid-2-child-1">One</div>
+            <div id="grid-2-child-2">Two</div>
+            <div id="grid-2-child-3">Three</div>
+            <div id="grid-2-child-4">Four</div>
+            <div id="grid-2-child-5">Five - Out of order and taller</div>
+            <div id="grid-2-child-6">Six</div>
+            <div id="grid-2-child-7">Seven - This one's a little longer as it takes 2 columns in the grid</div>
+            <div id="grid-2-child-8">Eight</div>
+            <div id="grid-2-child-9">Nine</div>
+            <div id="grid-2-child-10">Ten</div>
+            <div id="grid-2-child-11">Eleven</div>
+            <div id="grid-2-child-12">Twelve</div>
+        </div>
+        <div class="dragger"></div>
     </div>
 </body>
+<script src="../../dragger.js"></script>
 </html>
